// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package auth.internals;

option go_package = "go.chromium.org/luci/auth_service/api/internalspb";


// Internals service contains method used internally by the service UI.
service Internals {
  // RefreshXSRFToken can be used to extend the lifetime of an XSRF token.
  rpc RefreshXSRFToken(RefreshXSRFTokenRequest) returns (XSRFToken);
}


message RefreshXSRFTokenRequest {
  string xsrf_token = 1;
}


message XSRFToken {
  string xsrf_token = 1;
}
